# WEB_03_HW

./: factorize_async.py  factorize_sync.py  main.py  pyproject.toml
